force-app/main/default/objects/Settings_RCC__mdt/Settings_RCC__mdt.object-meta.xml
<CustomObject>
    <description>Informações sobre formulário RCC</description>
    <label>RCC Question</label>
    <pluralLabel>RCC</pluralLabel>
</CustomObject>