force-app/main/default/objects/Settings_RCC__mdt/fields/Calcula_Risco__c.field-meta.xml
<CustomField>
    <fullName>Calcula_Risco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calcula Risco</label>
    <type>Checkbox</type>
</CustomField>