force-app/main/default/objects/Settings_RCC__mdt/fields/Pergunta__c.field-meta.xml
<CustomField>
    <fullName>Pergunta__c</fullName>
    <label>Pergunta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>