force-app/main/default/objects/Settings_RCC__mdt/fields/Question_English__c.field-meta.xml
<CustomField>
    <fullName>Question_English__c</fullName>
    <label>Question English</label>
    <length>255</length>
    <type>Text</type>
</CustomField>